Closed Bug 450132 Opened 16 years ago Closed 16 years ago

"nsRenderingContextImpl.cpp(93) : warning C4101: 'buffer' : unreferenced local variable"

Categories

(Core Graveyard :: GFX, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1a2

People

(Reporter: sgautherie, Assigned: sgautherie)

References

Details

Attachments

(1 file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1a2pre) Gecko/20080811184452 Minefield/3.1a2pre] (home, optim default) (W2Ksp4)

{{
.../gfx/src/shared/nsRenderingContextImpl.cpp(93) : warning C4101: 'buffer' : unreferenced local variable
}}

This line can be removed too.
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1a2pre) Gecko/20080811184452 Minefield/3.1a2pre] (home, optim default) (W2Ksp4)
Assignee: nobody → sgautherie.bz
Status: NEW → ASSIGNED
Attachment #333263 - Flags: superreview?(roc)
Attachment #333263 - Flags: review?(roc)
Flags: in-testsuite-
Target Milestone: --- → mozilla1.9.1a2
Attachment #333263 - Flags: superreview?(roc)
Attachment #333263 - Flags: superreview+
Attachment #333263 - Flags: review?(roc)
Attachment #333263 - Flags: review+
Keywords: checkin-needed
pushed to mozilla-central, changeset 400292fd34f3
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Attachment #333263 - Attachment description: (Av1) <nsRenderingContextImpl.cpp> → (Av1) <nsRenderingContextImpl.cpp> [Checkin: Comment 2]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: