Bug 450132 - "nsRenderingContextImpl.cpp(93) : warning C4101: 'buffer' : unreferenced local variable", r/sr=roc